# simple-local-gallery

./: .env.example  .gitignore  Home.py  LICENSE  README.md  SimpleLocalGallery.py  app.py  main.py  openapi-ts.config.ts  package-lock.json  package.json  pyproject.toml
app/: entities.py  models.py  storage.py
notes/: database.ipynb  exif.ipynb  folder.ipynb  gemini.ipynb  gpx.ipynb  pydantic.ipynb
pages/: 1_Import_gpx.py  1_Select_gpx.py  1_Upload_gpx.py  2_Import_Photos.py  2_Select_Photos.py  2_Upload_Photos.py  3_Select_Photo.py
slg_server/: main.py
slg_server/api/: dto.py  main.py  static.py
slg_server/api/routes/: ai.py  filesystem.py  flickr.py  photos.py  settings.py  tracks.py
slg_server/core/: config.py
slg_server/services/: flickr.py  gemini.py  nominatim.py  photos.py  tracks.py
slg_server/storage/: main.py  models.py
slg_server/utils/: exif.py
src/: components.d.ts  main.ts  typed-router.d.ts
src/components/: AiHelper.vue  FlickrDialog.vue  FsPhotos.vue  FsSelectedPhotos.vue  FsTracks.vue  GalleryDrawer.vue  GalleryDrawerContent.vue  Photo.vue  TrackMap.vue
src/layouts/: default.vue
src/pages/: fs.vue  index.vue  photos.vue
src/pages/fs/: gpx-files.vue
src/pages/fs/photos/: [[folder]]+.vue
src/plugins/: index.ts  vuetify.ts
src/slg-api/: sdk.gen.ts  types.gen.ts
src/slg-api/@pinia/colada/: ai.gen.ts  filesystem.gen.ts  flickr.gen.ts  photos.gen.ts  settings.gen.ts  tracks.gen.ts
src/stores/: fs.ts  photos.ts  social.ts  traks.ts
web/: Home.py
web/pages/: 1_Upload_gpx.py  3_Select_Photo.py
